--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
     </div>
     <div class="centered-main-page-element">
       <p id='topSectionForAddingElementToList'>
@@ -25,18 +23,14 @@
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
+          <button class="delete"><img src="./remove.svg"></button>
         </li>
         <li class="editMode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class='edit'>Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
+          <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -46,9 +40,7 @@
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
+          <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
