--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="page">
 
     <header class="header">
-        <img src="./eisenhower-matrix.jpg">
+        <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
         <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
 
@@ -29,7 +29,7 @@
                 <label class="task">Pay Bills</label>
                 <input type="text" class="task-input">
                 <button class="btn-primary edit">Edit</button>
-                <button class="btn-primary delete"><img src="./remove.svg"></button>
+                <button class="btn-primary delete"><img src="./remove.svg" alt="button delete"></button>
               </div>
 
             <div class="todo-item editMode">
@@ -37,7 +37,7 @@
               <label class="task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="task-input">
               <button class="btn-primary edit">Save</button>
-              <button class="btn-primary delete"><img src="./remove.svg"></button>
+              <button class="btn-primary delete"><img src="./remove.svg" alt="button delete"></button>
             </div>
           </div>
         </section>
@@ -45,11 +45,11 @@
         <section class="completed">
           <h3 class="title">Completed</h3>
             <div class="todo-item" id="completed-tasks">
-              <input class="check-input" type="checkbox" checked>
+            <input class="check-input" type="checkbox" checked>
               <label class="task">See the Doctor</label>
               <input type="text" class="task-input">
               <button class="btn-primary edit">Edit</button>
-              <button class="btn-primary delete"><img src="./remove.svg"></button>
+              <button class="btn-primary delete"><img src="./remove.svg" alt="button delete"></button>
             </div>
         </section>
     </main>
