feat: close single tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="page">
 
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix">
+      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix" />
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower" target="blank">Want more details?</a>
     </header>
 
@@ -19,7 +19,7 @@
       <section class="add-item">
         <label for="new-task" class="title">Add Item</label>
         <div class="task-wrapper">
-          <input type="text" id="new-task" class="task-input add-item-input">
+          <input type="text" id="new-task" class="task-input add-item-input" />
           <button type="button" class="btn-primary">Add</button>
         </div>
       </section>
@@ -28,18 +28,18 @@
         <h3 class="title">Todo</h3>
         <ul class="todo-group" id="incompleteTasks">
           <li class="todo-item">
-            <input class="check-input" type="checkbox">
+            <input class="check-input" type="checkbox" />
             <label class="task">Pay Bills</label>
-            <input type="text" class="task-input">
+            <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete"></button>
+            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
           </li>
           <li class="todo-item editMode">
-            <input class="check-input" type="checkbox">
+            <input class="check-input" type="checkbox" />
             <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-input">
+            <input type="text" value="Go Shopping" class="task-input" />
             <button type="button" class="btn-primary edit">Save</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete"></button>
+            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
@@ -48,11 +48,11 @@
         <h3 class="title">Completed</h3>
         <ul class="completed-group" id="completed-tasks">
           <li class="todo-item">
-            <input class="check-input" type="checkbox" checked>
+            <input class="check-input" type="checkbox" checked />
             <label class="task">See the Doctor</label>
-            <input type="text" class="task-input">
+            <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete"></button>
+            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
