--- a/index.html
+++ b/index.html
@@ -5,54 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
 
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix" />
+      <img src="eisenhower-matrix.jpg" alt="The Eisenhower Matrix" />
       <a class="header-link" href="//goal-life.com/page/method/matrix-eisenhower" target="blank">Want more details?</a>
     </header>
 
     <main class="main">
       <section class="add-item">
-        <label for="new_task" class="title">Add Item</label>
+        <label for="new-task" class="title">Add Item</label>
         <div class="task-wrapper">
-          <input type="text" id="new_task" class="task-input add-item-input" />
+          <input type="text" id="new-task" class="task-input add-item-input" />
           <button type="button" class="btn-primary">Add</button>
         </div>
       </section>
 
       <section class="todo">
         <h3 class="title">Todo</h3>
-        <ul class="todo-group" id="incomplete_tasks">
+        <ul class="todo-group" id="incomplete-tasks">
           <li class="todo-item">
-            <input type="checkbox" class="check-input" />
-            <label class="task">Pay Bills</label>
+            <input type="checkbox" id="todo-item1_checkbox" class="check-input" />
+            <label for="todo-item1_checkbox" class="task">Pay Bills</label>
             <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
           </li>
           <li class="todo-item edit-mode">
-            <input type="checkbox" class="check-input" />
-            <label class="task">Go Shopping</label>
+            <input type="checkbox" id="todo-item2_checkbox" class="check-input" />
+            <label for="todo-item2_checkbox" class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task-input" />
             <button type="button" class="btn-primary edit">Save</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
 
       <section class="completed">
         <h3 class="title">Completed</h3>
-        <ul class="completed-group" id="completed_tasks">
+        <ul class="completed-group" id="completed-tasks">
           <li class="todo-item">
-            <input type="checkbox" class="check-input" checked />
-            <label class="task">See the Doctor</label>
+            <input type="checkbox" id="todo-item3_checkbox" class="check-input" checked />
+            <label for="todo-item3_checkbox" class="task">See the Doctor</label>
             <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="./remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
