--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="page">
 
     <header class="header">
-      <img src="eisenhower-matrix.jpg" alt="The Eisenhower Matrix" />
+      <img class="header-img" src="eisenhower-matrix.jpg" alt="The Eisenhower Matrix" />
       <a class="header-link" href="//goal-life.com/page/method/matrix-eisenhower" target="blank">Want more details?</a>
     </header>
 
@@ -32,14 +32,14 @@
             <label for="todo-item1_checkbox" class="task">Pay Bills</label>
             <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img class="btn-primary-img" src="remove.svg" alt="Delete" /></button>
           </li>
           <li class="todo-item edit-mode">
             <input type="checkbox" id="todo-item2_checkbox" class="check-input" />
             <label for="todo-item2_checkbox" class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task-input" />
             <button type="button" class="btn-primary edit">Save</button>
-            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img class="btn-primary-img" src="remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
@@ -52,7 +52,7 @@
             <label for="todo-item3_checkbox" class="task">See the Doctor</label>
             <input type="text" class="task-input" />
             <button type="button" class="btn-primary edit">Edit</button>
-            <button type="button" class="btn-primary delete"><img src="remove.svg" alt="Delete" /></button>
+            <button type="button" class="btn-primary delete"><img class="btn-primary-img" src="remove.svg" alt="Delete" /></button>
           </li>
         </ul>
       </section>
